2007-12-31  David Schleef  <ds@schleef.org>

	* ext/musicbrainz/gsttrm.c:
	  Don't emit signiture when going to READY, because it might
	  not be ready.
	* ext/nas/nassink.c:
	  Remove useless call that sleeps for 5 seconds.  Yup, it calls
	  sleep(1) 5 times.  Go NAS.
	* gst/librfb/gstrfbsrc.c:
	* gst/librfb/rfbdecoder.c:
	  Initialize our debug categories properly.
	* gst/rawparse/gstrawparse.c:
	  Don't register element details for a non-element.  Be much more
	  rude when subclass doesn't set a pad template (assert!).  Don't
	  unref the pad template; we don't own it.
	* gst/videosignal/gstvideoanalyse.c:
	  Initialize debug category.
	* tests/check/Makefile.am:
	  Ignore nassink element in tests because it has unavoidable
	  long timeouts.

2007-12-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpssrcdemux.c:
	(gst_rtp_ssrc_demux_change_state):
	Don't clean up pads when going to PAUSED.

2007-12-30  David Schleef  <ds@schleef.org>

	* configure.ac:
	* sys/glsink/Makefile.am:
	  Switch to using pkgconfig to detect libGL.  Since we use
	  recent features added to Mesa, there's no point in adding
	  a check for pre-pkgconfig versions.

2007-12-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/ladspa/gstladspa.c: (gst_ladspa_get_property):
	* ext/sdl/sdlvideosink.c: (gst_sdlvideosink_show_frame):
	* gst/mve/gstmvemux.c: (gst_mve_mux_request_new_pad):
	* sys/dvb/dvbbasebin.c: (dvb_base_bin_class_init):
	Fix 'xyz may be used uninitialized' compiler warnings caused
	by broken g_assert_not_reached() macro in GLib-2.15.x and don't
	abort() in any case but properly report the error.

2007-12-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* ext/gio/gstgio.c:
	* ext/gio/gstgio.h:
	* ext/gio/gstgiobasesink.h:
	* ext/gio/gstgiobasesrc.c: (gst_gio_base_src_get_size):
	* ext/gio/gstgiobasesrc.h:
	* ext/gio/gstgiosink.c: (gst_gio_sink_start):
	* ext/gio/gstgiosink.h:
	* ext/gio/gstgiosrc.h:
	* ext/gio/gstgiostreamsink.h: