@@ -13,7 +13,7 @@ TESTS_ENVIRONMENT = \
         $(REGISTRY_ENVIRONMENT)                                 \
         GST_PLUGIN_SYSTEM_PATH=					\
         GST_PLUGIN_PATH=$(top_builddir)/gst:$(top_builddir)/sys:$(top_builddir)/ext:$(GSTPB_PLUGINS_DIR):$(GST_PLUGINS_DIR) \
-        STATE_IGNORE_ELEMENTS="nassink glimagesink"
+        STATE_IGNORE_ELEMENTS="vcdsrc nassink glimagesink"
 
 plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
@@ -72,8 +72,9 @@ check_PROGRAMS = \
 	elements/rganalysis \
 	elements/rglimiter \
 	elements/rgvolume \
-	elements/spectrum \
 	elements/y4menc
+
+#	elements/spectrum
 
 TESTS = $(check_PROGRAMS)
 
